--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/text-to-speech": "^4.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.7.4"
   }
 }
