--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@google-cloud/text-to-speech": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.6",
     "typescript": "^4.7.4"
   }
 }
