--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@types/node": "^18.0.6",
     "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "start": "node index",
+    "prestart": "tsc"
   }
 }
